ping_pong/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
