ping_pong/manifests/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ping-pong-route
  namespace: exercises
spec:
  parentRefs:
    - name: ping-pong-gateway
  rules:
    - matches: 
      - path:
          type: PathPrefix
          value: /pingpong
      filters:
      - type: URLRewrite
        urlRewrite:
          path: 
            type: ReplacePrefixMatch
            replacePrefixMatch: /
      backendRefs:
        - name: ping-pong-svc
          port: 3000
